<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".view.activity.AddParkingActivity"
    tools:ignore="MissingPrefix">

    <include
        layout="@layout/activity_add_parking_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_220"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/size_16"
        android:paddingLeft="@dimen/size_16"
        android:paddingRight="@dimen/size_16">

        <TextView
            style="@style/AddParking_Textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/add_parking_name"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edt_add_parking_name"
            style="@style/AddParking_Editext_Border"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/input_parking_name" />

        <TextView
            style="@style/AddParking_Textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/add_address"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edt_add_parking_diacho"
            style="@style/AddParking_Editext_Border_No_Focus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40"
            android:layout_marginTop="@dimen/size_8"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:drawablePadding="@dimen/size_16"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:hint="@string/input_address"
            app:theme="@style/AddParking_Editext.ButtumLine" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:layout_weight="3">

                <TextView
                    style="@style/AddParking_Textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/add_transport"
                    android:textColor="@android:color/white" />

                <TextView
                    style="@style/AddParking_Textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_8"
                    android:layout_marginStart="@dimen/size_8"
                    android:layout_weight="1"
                    android:text="@string/add_empty"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:layout_weight="3">

                <Spinner
                    android:id="@+id/sp_add_parking_type"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_40"
                    android:layout_marginEnd="@dimen/size_6"
                    android:layout_marginRight="@dimen/size_6"
                    android:layout_weight="2"
                    android:background="@drawable/edittext_add_parking" />

                <EditText
                    android:id="@+id/edt_add_parking_empty"
                    style="@style/AddParking_Editext_Border"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/size_6"
                    android:layout_marginStart="@dimen/size_6"
                    android:layout_weight="1"
                    android:hint="0"
                    android:inputType="number"
                    android:maxLength="7" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16">

                <TextView
                    style="@style/AddParking_Textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_time_open"
                    android:textColor="@android:color/white" />

                <TextView
                    style="@style/AddParking_Textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_8"
                    android:layout_marginStart="@dimen/size_8"
                    android:text="@string/add_time_close"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8">

                <EditText
                    android:id="@+id/edt_add_parking_begin_time"
                    style="@style/AddParking_Editext_Border_No_Focus"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_40"
                    android:layout_marginEnd="@dimen/size_6"
                    android:layout_marginRight="@dimen/size_6"
                    android:drawableEnd="@drawable/ic_access_time_white_24dp"
                    android:drawableRight="@drawable/ic_access_time_white_24dp"
                    android:text="@string/add_time_zero"
                    app:theme="@style/AddParking_Editext.ButtumLine" />

                <EditText
                    android:id="@+id/edt_add_parking_end_time"
                    style="@style/AddParking_Editext_Border_No_Focus"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_40"
                    android:layout_marginLeft="@dimen/size_6"
                    android:layout_marginStart="@dimen/size_6"
                    android:drawableEnd="@drawable/ic_access_time_white_24dp"
                    android:drawableRight="@drawable/ic_access_time_white_24dp"
                    android:text="@string/add_time_end"
                    app:theme="@style/AddParking_Editext.ButtumLine" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/AddParking_Textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_8"
                    android:layout_marginRight="@dimen/size_8"
                    android:text="@string/add_price"
                    android:textColor="@android:color/white" />

                <TextView
                    style="@style/AddParking_Textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_8"
                    android:layout_marginRight="@dimen/size_8"
                    android:text="@string/add_follow_name"
                    android:textColor="@android:color/white" />

                <TextView
                    style="@style/AddParking_Textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_44"
                    android:layout_marginRight="@dimen/size_44"
                    android:text="@string/add_follow_price"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_add_parking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:nestedScrollingEnabled="false"
                    tools:ignore="UnusedAttribute" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:background="@color/btn_fb_plus"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="addParking"
        android:text="@string/add_dangtin"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>