<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".view.activity.ProfileActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/colorPrimary"
                android:gravity="bottom|end"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|snap">

                <ImageButton
                    android:id="@+id/img_profile_camera"
                    android:layout_width="@dimen/size_48"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:paddingRight="@dimen/size_10"
                    android:src="@mipmap/ic_camera"
                    app:layout_collapseMode="parallax" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-50dp"
                android:background="@drawable/round_background_white"
                android:elevation="@dimen/size_8"
                tools:ignore="UnusedAttribute">

                <com.xtel.vparking.view.widget.RoundImage
                    android:id="@+id/img_profile_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/size_2"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_user" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/size_16">

                <TextView
                    android:id="@+id/txt_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_16"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_24"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_nam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/size_24"
                        android:enabled="false"
                        android:button="@drawable/custom_radiobutton"
                        android:paddingLeft="@dimen/size_10"
                        android:text="@string/nam" />

                    <RadioButton
                        android:id="@+id/radio_nu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size_24"
                        android:enabled="false"
                        android:button="@drawable/custom_radiobutton"
                        android:paddingLeft="@dimen/size_10"
                        android:text="@string/nu" />
                </RadioGroup>

                <EditText
                    android:enabled="false"
                    android:id="@+id/edt_profile_fname"
                    style="@style/Profile_editext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10"
                    android:hint="@string/hotenl"
                    android:inputType="text"
                    app:theme="@style/Profile_editext.ButtumLine"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:enabled="false"
                    android:id="@+id/edt_profile_lname"
                    style="@style/Profile_editext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_8"
                    android:hint="@string/hotenf"
                    android:inputType="text"
                    app:theme="@style/Profile_editext.ButtumLine"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:enabled="false"
                    android:id="@+id/edt_profile_birth"
                    style="@style/Profile_editext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_8"
                    android:hint="@string/birth_day_info"
                    android:inputType="text"
                    app:theme="@style/Profile_editext.ButtumLine"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:enabled="false"
                    android:id="@+id/edt_profile_phone"
                    style="@style/Profile_editext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_8"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    app:theme="@style/Profile_editext.ButtumLine"
                    tools:ignore="MissingPrefix" />

                <EditText
                    android:enabled="false"
                    android:id="@+id/edt_profile_address"
                    style="@style/Profile_editext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_8"
                    android:hint="@string/address_info"
                    android:inputType="text"
                    app:theme="@style/Profile_editext.ButtumLine"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_profile_hoantat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:background="@color/btn_fb_plus"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/hoantat"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>