<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/ic_bgr"
    tools:context=".view.activity.LoginActivity">


    <ImageView
        android:src="@mipmap/parking_logo_48"
        android:scaleType="fitXY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <TextView
        android:textSize="18sp"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/img_logo"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:id="@+id/tv_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spalsh_text"/>

    <LinearLayout
        android:id="@+id/ln_layout_btn"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/size_10"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:id="@+id/btn_Signin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48"
            android:text="@string/signin_mobile"
            android:textColor="@android:color/white"
            android:maxLines="2"
            android:background="@drawable/btn_login"/>

        <LinearLayout
            android:id="@+id/ln_line_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:background="#ffffff" />
            <TextView
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:id="@+id/tv_or"
                android:layout_margin="@dimen/size_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_text"/>
            <TextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:background="#ffffff" />
        </LinearLayout>

        <Button
            android:elevation="0dp"
            android:id="@+id/btn_fb_signin"
            android:paddingRight="40dp"
            android:drawableLeft="@mipmap/ic_fb_singin"
            android:text="@string/singin_facebook"
            android:textColor="@android:color/white"
            android:background="@drawable/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48" />
    </LinearLayout>

</RelativeLayout>
